--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0"
+  },
+  "dependencies": {
+    "sass-rem": "^2.0.1"
   }
 }
