--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0"
+    "@11ty/eleventy": "^2.0",
+    "autoprefixer": "^10.0.1",
+    "clean-css": "^5.0",
+    "html-minifier": "^4.0.0",
+    "postcss": "^8.1.1",
+    "postcss-cli": "^10.0",
+    "sass-autoprefixer": "^1.0.1"
   },
   "dependencies": {
-    "sass-rem": "^2.0.1"
+    "node-sass": "^8.0",
+    "uglify-es": "^3.3.9"
   }
 }
