--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "build": "npx eleventy",
     "watch": "npx eleventy --watch",
-    "serve": "npx eleventy --serve & node-sass --watch _includes/assets/sass/styles.scss _includes/assets/css/styles.css & npx postcss --watch _includes/assets/css/styles.css --use autoprefixer -d _includes/assets/css/build ",
+    "serve": "(npm run sass:build) && npx eleventy --serve & node-sass --watch _includes/assets/sass/ -o _includes/assets/css/ & npx postcss --watch _includes/assets/css/*.css --use autoprefixer -d _includes/assets/css/build",
     "debug": "DEBUG=* npx eleventy",
     "wdebug": "set DEBUG=Eleventy* & eleventy",
-    "sass": "node-sass --watch _includes/assets/sass/styles.scss _includes/assets/css/styles.css",
+    "sass:build": "node-sass _includes/assets/sass/ -o _includes/assets/css/  & npx postcss _includes/assets/css/*.css --use autoprefixer -d _includes/assets/css/build",
+    "sass:watch": "node-sass --watch _includes/assets/sass/ -o _includes/assets/css/ & npx postcss --watch _includes/assets/css/*.css --use autoprefixer -d _includes/assets/css/build",
+    "stylelint": "stylelint _includes/assets/**/*.scss",
     "npf": "npx postcss _includes/assets/css/styles.css --use autoprefixer -d _includes/assets/css/build"
   },
   "repository": {
@@ -21,12 +23,19 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0",
+    "@11ty/eleventy-navigation": "^0.3.5",
     "autoprefixer": "^10.0.1",
     "clean-css": "^5.0",
     "html-minifier": "^4.0.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.7",
     "postcss": "^8.1.1",
     "postcss-cli": "^10.0",
-    "sass-autoprefixer": "^1.0.1"
+    "sass-autoprefixer": "^1.0.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.1.0"
   },
   "dependencies": {
     "node-sass": "^8.0",
