--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0",
     "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
     "autoprefixer": "^10.0.1",
     "clean-css": "^5.0",
     "html-minifier": "^4.0.0",
