--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-minifier": "^4.0.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
+    "markdown-it-attrs": "^4.1.6",
     "postcss": "^8.1.1",
     "postcss-cli": "^10.0",
     "sass-autoprefixer": "^1.0.1",
