--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "autoprefixer": "^10.0.1",
     "clean-css": "^5.0",
+    "eleventy-plugin-embed-everything": "^1.16.0",
     "eleventy-plugin-time-to-read": "^1.3.0",
     "html-minifier": "^4.0.0",
     "markdown-it": "^13.0.1",
