build sass first

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The website for J S Baker",
   "main": "index.js",
   "scripts": {
-    "build": "npx eleventy",
+    "build": "(npm run sass:build) && npx eleventy",
     "watch": "npx eleventy --watch",
     "serve": "(npm run sass:build) && npx eleventy --serve & node-sass --watch _includes/assets/sass/ -o _includes/assets/css/ & npx postcss --watch _includes/assets/css/*.css --use autoprefixer -d _includes/assets/css/build",
     "debug": "DEBUG=* npx eleventy",
