--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Build dry run site
+        run: npm run build:dryrun
       
       - name: Build site
         run: npm run build
