Dryrun step name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build dry run site
+      - name: Build site (dry run)
         run: npm run build:dryrun
       
       - name: Build site
