--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eleventy-plugin-embed-everything": "^1.16.0",
     "eleventy-plugin-time-to-read": "^1.3.0",
     "html-minifier": "^4.0.0",
+    "luxon": "^3.3.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-attrs": "^4.1.6",
