--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve": "(npm run sass:build) && (npx eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch src/sass/:_includes/assets/css/",
     "debug": "DEBUG=* npx eleventy",
     "wdebug": "set DEBUG=Eleventy* & eleventy",
-    "sass:build": "sass --style=compressed src/sass/:_includes/assets/css/",
+    "sass:build": "sass --style=compressed src/sass/:_includes/assets/css/  & npx postcss _includes/assets/css/*.css --use autoprefixer -d _includes/assets/css",
     "sass:dev": "sass --watch --update --style=expanded src/sass/:_includes/assets/css/",
     "lint:scss": "stylelint \"src/sass/**/*.scss\"",
     "npf": "npx postcss _includes/assets/css/styles.css --use autoprefixer -d _includes/assets/css/build"
