Add 11ty MD images package

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-attrs": "^4.1.6",
+    "markdown-it-eleventy-img": "^0.10.1",
     "markdown-it-small": "^1.0.0",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1",
