Update homepage image

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "(npm run sass:build) && npx @11ty/eleventy",
     "build:dryrun": "(npm run sass:build) && npx @11ty/eleventy --dryrun",
     "watch": "npx eleventy --watch",
-    "serve": "(npm run sass:build) && (npx eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch src/sass/:_includes/assets/css/",
+    "serve": "(yarn sass:build) && (npx eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch src/sass/:_includes/assets/css/",
+    "up": "yarn serve",
     "debug": "DEBUG=* npx eleventy",
     "wdebug": "set DEBUG=Eleventy* & eleventy",
     "sass:build": "sass --style=compressed src/sass/:_includes/assets/css/  & npx postcss _includes/assets/css/*.css --use autoprefixer -d _includes/assets/css",
