--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,24 +14,25 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          yarn install --frozen-lockfile
 
       - name: Build site (dry run)
-        run: npm run build:dryrun
+        run: yarn build:dryrun
       
       - name: Build site
-        run: npm run build
+        run: yarn build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
