--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "jsbaker.co.uk",
   "version": "1.0.0",
   "description": "The website for J S Baker",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "(npm run sass:build) && npx @11ty/eleventy",
+    "build:full": "(yarn clean) && (yarn sass:build) && (npx @11ty/eleventy --dryrun) && (npx @11ty/eleventy)",
     "build:dryrun": "(npm run sass:build) && npx @11ty/eleventy --dryrun",
+    "clean": "npx rimraf -v _site/* static/img/*",
     "watch": "npx eleventy --watch",
-    "serve": "(yarn sass:build) && (npx eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch src/sass/:_includes/assets/css/",
+    "serve": "(yarn clean) && (yarn sass:build) && (npx eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch src/sass/:src/_includes/assets/css/",
     "up": "yarn serve",
     "debug": "DEBUG=* npx eleventy",
     "wdebug": "set DEBUG=Eleventy* & eleventy",
-    "sass:build": "sass --style=compressed src/sass/:_includes/assets/css/  & npx postcss _includes/assets/css/*.css --use autoprefixer -d _includes/assets/css",
-    "sass:dev": "sass --watch --update --style=expanded src/sass/:_includes/assets/css/",
+    "sass:build": "sass --style=compressed src/sass/:src/_includes/assets/css/  & npx postcss src/_includes/assets/css/*.css --use autoprefixer -d src/_includes/assets/css",
+    "sass:dev": "sass --watch --update --style=expanded src/sass/:src/_includes/assets/css/",
     "lint:scss": "stylelint \"src/sass/**/*.scss\"",
-    "npf": "npx postcss _includes/assets/css/styles.css --use autoprefixer -d _includes/assets/css/build"
+    "npf": "npx postcss src/_includes/assets/css/styles.css --use autoprefixer -d src/_includes/assets/css/build"
   },
   "repository": {
     "type": "git",
@@ -24,33 +27,34 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0",
+    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-img": "^5.0.0",
     "@11ty/eleventy-navigation": "^0.3.5",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "autoprefixer": "^10.4.14",
-    "clean-css": "^5.3",
-    "eleventy-plugin-embed-everything": "^1.16.0",
+    "@11ty/eleventy-plugin-rss": "^2.0.2",
+    "@types/markdown-it": "^14.1.2",
+    "autoprefixer": "^10.4.20",
+    "clean-css": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "eleventy-plugin-embed-everything": "^1.19.0",
     "eleventy-plugin-time-to-read": "^1.3.0",
     "html-minifier": "^4.0.0",
-    "luxon": "^3.3.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.7",
-    "markdown-it-attrs": "^4.1.6",
-    "markdown-it-eleventy-img": "^0.10.1",
+    "luxon": "^3.5.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-attrs": "^4.2.0",
+    "markdown-it-eleventy-img": "^0.10.2",
     "markdown-it-small": "^1.0.0",
-    "postcss": "^8.4.31",
-    "postcss-cli": "^10.1",
-    "sass": "^1.63.3",
+    "markdown-it-sup": "^2.0.0",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.0",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "sass": "^1.80.6",
     "sass-autoprefixer": "^1.0.1",
-    "sass-migrator": "^1.7.3",
-    "stylelint": "^15.7.0",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-standard-scss": "^9.0.0",
-    "stylelint-prettier": "^3.0.0",
-    "stylelint-scss": "^5.0.1"
-  },
-  "dependencies": {
-    "@11ty/eleventy-img": "^3.1.0",
-    "uglify-es": "^3.3.9"
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-prettier": "^5.0.2",
+    "stylelint-scss": "^6.8.1"
   }
 }
