--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "dotenv": "^16.4.5",
     "eleventy-plugin-embed-everything": "^1.19.0",
     "eleventy-plugin-time-to-read": "^1.3.0",
-    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "luxon": "^3.5.0",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
