Upgrade to Yarn 3

--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "build": "(npm run sass:build) && npx @11ty/eleventy",
     "build:full": "(yarn clean) && (yarn sass:build) && (npx @11ty/eleventy --dryrun) && (npx @11ty/eleventy)",
     "build:dryrun": "(npm run sass:build) && npx @11ty/eleventy --dryrun",
-    "clean": "npx rimraf -v _site/* static/img/*",
+    "clean": "npx rimraf -v _site/*",
     "watch": "npx eleventy --watch",
-    "serve": "(yarn clean) && (yarn sass:build) && (npx eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch src/sass/:src/_includes/assets/css/",
-    "up": "yarn serve",
+    "serve": "(yarn clean) && (yarn sass:build) && (npx @11ty/eleventy --dryrun) & npx @11ty/eleventy --serve & sass --watch --style=expanded ./src/_sass/:./src/_includes/assets/css/",
+    "go": "yarn serve",
     "debug": "DEBUG=* npx eleventy",
     "wdebug": "set DEBUG=Eleventy* & eleventy",
-    "sass:build": "sass --style=compressed src/sass/:src/_includes/assets/css/  & npx postcss src/_includes/assets/css/*.css --use autoprefixer -d src/_includes/assets/css",
-    "sass:dev": "sass --watch --update --style=expanded src/sass/:src/_includes/assets/css/",
-    "lint:scss": "stylelint \"src/sass/**/*.scss\"",
+    "sass:build": "sass --style=compressed src/_sass/:src/_includes/assets/css/  & npx postcss src/_includes/assets/css/*.css --use autoprefixer -d src/_includes/assets/css",
+    "sass:dev": "sass --watch --update --style=expanded src/_sass/:src/_includes/assets/css/",
+    "lint:scss": "stylelint \"src/_sass/**/*.scss\"",
     "npf": "npx postcss src/_includes/assets/css/styles.css --use autoprefixer -d src/_includes/assets/css/build"
   },
   "repository": {
@@ -28,35 +28,35 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
-    "@11ty/eleventy-img": "^5.0.0",
+    "@11ty/eleventy-img": "^6.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
-    "@11ty/eleventy-plugin-rss": "^2.0.2",
+    "@11ty/eleventy-plugin-rss": "^2.0.3",
     "@types/markdown-it": "^14.1.2",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "clean-css": "^5.3.3",
-    "dotenv": "^16.4.5",
-    "eleventy-plugin-embed-everything": "^1.19.0",
+    "dotenv": "^16.4.7",
+    "eleventy-plugin-embed-everything": "^1.20.0",
     "eleventy-plugin-time-to-read": "^1.3.0",
     "html-minifier-terser": "^7.2.0",
     "luxon": "^3.5.0",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
-    "markdown-it-attrs": "^4.2.0",
+    "markdown-it-attrs": "^4.3.1",
     "markdown-it-eleventy-img": "^0.10.2",
     "markdown-it-small": "^1.0.0",
     "markdown-it-sup": "^2.0.0",
-    "postcss": "^8.4.47",
-    "postcss-cli": "^11.0.0",
-    "prettier": "^3.3.3",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "sass": "^1.80.6",
+    "sass": "^1.85.1",
     "sass-autoprefixer": "^1.0.1",
-    "stylelint": "^16.10.0",
+    "stylelint": "^16.15.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-prettier": "^5.0.2",
-    "stylelint-scss": "^6.8.1",
+    "stylelint-prettier": "^5.0.3",
+    "stylelint-scss": "^6.11.1",
     "uglify-js": "^3.19.3"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@3.8.7"
 }
