--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ static/img/
 
 .DS_Store
 .env
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
