--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "markdown-it-sup": "^2.0.0",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
+    "posthtml": "^0.16.6",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "sass": "^1.85.1",
@@ -58,5 +59,10 @@
     "stylelint-scss": "^6.11.1",
     "uglify-js": "^3.19.3"
   },
-  "packageManager": "yarn@3.8.7"
+  "packageManager": "yarn@3.8.7",
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "resend": "^4.1.2"
+  }
 }
