--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,14 @@
 nodeLinker: node-modules
 
+packageExtensions:
+  "@11ty/eleventy-plugin-bundle@*":
+    peerDependencies:
+      posthtml: "*"
+  resend@*:
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
