Add linktree to about page

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "(npm run sass:build) && npx @11ty/eleventy",
     "build:full": "(yarn sass:build) && (npx @11ty/eleventy --dryrun) && (npx @11ty/eleventy)",
     "build:dryrun": "(npm run sass:build) && npx @11ty/eleventy --dryrun",
-    "clean": "npx rimraf -v _site/*",
+    "clean": "npx rimraf -v _site/* static/img/*",
     "watch": "npx eleventy --watch",
-    "serve": "(yarn clean) && (yarn sass:build) && (npx @11ty/eleventy --dryrun) & npx @11ty/eleventy --serve & sass --watch --style=expanded ./src/_sass/:./src/_includes/assets/css/",
+    "serve": "(yarn clean) && (yarn sass:build) && (npx @11ty/eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch --style=expanded ./src/_sass/:./src/_includes/assets/css/",
     "go": "yarn serve",
     "debug": "DEBUG=* npx eleventy",
     "wdebug": "set DEBUG=Eleventy* & eleventy",
