--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [11ty ]
+    branches: [main]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [11ty ]
+    branches: [main]
   schedule:
     - cron: '36 17 * * 5'
 
