--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dryrun": "(npm run sass:build) && npx @11ty/eleventy --dryrun",
     "clean": "npx rimraf -v _site/* static/img/*",
     "watch": "npx eleventy --watch",
-    "serve": "(yarn clean) && (yarn sass:build) && (npx @11ty/eleventy --dryrun) && npx @11ty/eleventy --serve & sass --watch --style=expanded ./src/_sass/:./src/_includes/assets/css/",
+    "serve": "(yarn clean) && (yarn sass:build) && (npx @11ty/eleventy --dryrun) && (npx @11ty/eleventy --serve & yarn sass:dev)",
     "go": "yarn serve",
     "debug": "DEBUG=* npx eleventy",
     "wdebug": "set DEBUG=Eleventy* & eleventy",
