--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,6 +9,4 @@ packageExtensions:
       react: "*"
       react-dom: "*"
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
